# kaffee

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  update_plugin.sh  update_plugins.sh
.github/workflows/: build-app.yml
configs/: nginx.conf  nomad.yaml
custom-search-filters/: pyproject.toml
custom-search-filters/src/custom_search_filters/apps/: __init__.py
